<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZARA</string>
    <string name="action_settings">Settings</string>

    <!-- leading -->
    <string name="leading">WE HAVE A DREAM</string>
    <!-- login -->
    <string name="login_email">电子邮箱</string>
    <string name="login_password">密码(6~18个字符)</string>
    <string name="login_forgetpassword">忘记密码？</string>
    <string name="login_enter">ENTER</string>
    <string name="login_new_account">创建账户</string>
    <string name="login_foot">WE HAVE A DREAM</string>

    <!-- navigation -->
    <string name="navigation_footer_home">首页</string>
    <string name="navigation_footer_catagory">分类</string>
    <string name="navigation_footer_fashion">时尚</string>
    <string name="navigation_footer_cart">购物篮</string>
    <string name="navigation_footer_my">我的</string>

    <!-- LoginAc -->
    <string name="username_illegal_tips">用户名不能为空！</string>
    <string name="password_illegal_tips">密码必须为6~18个字符！</string>
    <string name="username_not_exist">用户名不存在！</string>
    <string name="password_is_uncorrect">密码错误！</string>
    <!-- OrderAc -->
    <string name="item_order_wait_bill">等待付款</string>
    <string name="item_order_wait_transporting">正在运输中</string>
    <string name="item_order_wait_arrived">已送达</string>
    <string name="orderAc_title">我的订单</string>
    <!-- MyFragment -->
    <string name="myFragemnt_title">我的</string>

    <!-- CatagoryFragment -->
    <string name="catagoryFragemnt_title">分类</string>
    <!-- DiscountCatagoryFragment -->
    <string name="DiscountCatagoryFragemnt_title">打折</string>
    <!-- FashionFragment -->
    <string name="FashionFragemnt_title">时尚</string>
    <!-- NewFragment -->
    <string name="NewFragemnt_title">新品</string>
    <!-- HotFragment -->
    <string name="HotFragemnt_title">热门</string>
    <!-- CartFragment -->
    <string name="CartFragemnt_title">购物篮</string>
    <!-- ConfirmFragment -->
    <string name="ConfirmFragemnt_title">确认订单</string>
    <!-- Setting -->
    <string name="settingAc_title">设置</string>
    <!-- Message -->
    <string name="messageAc_title">消息</string>
    <!-- DetailForOrderFragment -->
    <string name="DetailForOrderFragment_title">订单详情</string>

</resources>