<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <RadioGroup
        android:id="@+id/navigation_rg_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/navigation_rb_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/navigation_rb_home_selector"
            android:gravity="center"
            android:text="@string/navigation_footer_home"
            android:textColor="@drawable/navigation_rb_text_selector" />

        <RadioButton
            android:id="@+id/navigation_rb_catagory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/navigation_rb_catagory_selector"
            android:gravity="center"
            android:text="@string/navigation_footer_catagory"
            android:textColor="@drawable/navigation_rb_text_selector" />

        <RadioButton
            android:id="@+id/navigation_rb_fashion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/navigation_rb_fashion_selector"
            android:gravity="center"
            android:text="@string/navigation_footer_fashion"
            android:textColor="@drawable/navigation_rb_text_selector" />

        <RadioButton
            android:id="@+id/navigation_rb_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/navigation_rb_cart_selector"
            android:gravity="center"
            android:text="@string/navigation_footer_cart"
            android:textColor="@drawable/navigation_rb_text_selector" />

        <RadioButton
            android:id="@+id/navigation_rb_my"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/navigation_rb_my_selector"
            android:gravity="center"
            android:text="@string/navigation_footer_my"
            android:textColor="@drawable/navigation_rb_text_selector" />
    </RadioGroup>

</LinearLayout>