<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/loginAc_iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:src="@drawable/login_arrow_back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EDEDED" />

    <!-- logo -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <!-- email -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/login_iv_email" />

            <EditText
                android:id="@+id/loginAc_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/login_email"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/login_iv_line" />
        <!-- password -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/login_iv_password" />

            <EditText
                android:id="@+id/loginAc_et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/loginAc_tv_forgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forgetpassword"
                android:textColor="#828282"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/login_iv_line" />
        <!-- ENTER -->

        <Button
            android:id="@+id/loginAc_btn_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_bg_rect"
            android:text="@string/login_enter"
            android:textColor="#6A6A6A" />

        <LinearLayout
            android:id="@+id/loginAc_ll_newaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_bg_rect"
            android:gravity="center" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:drawableLeft="@drawable/login_iv_account"
                android:gravity="center"
                android:text="@string/login_new_account"
                android:textColor="#6A6A6A" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/login_foot"
        android:textSize="18sp" />

</LinearLayout>